--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Root\Root.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
